--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 .main{
 	background-image: url("jpg その他 image 1.JPEG");
-	background-size: contain;
+	background-size: cover;
         background-repeat: no-repeat;
         display: flex;
 
