--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 .main{
+	width:75%
 	background-image: url("jpg その他 image 1.JPEG");
 	background-size: cover;
         background-repeat: no-repeat;
