--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 .main{
-	width: 75%;
+	width: 800px;
 	background-image: url("jpg その他 image 1.JPEG");
 	background-size: cover;
         background-repeat: no-repeat;
